--- a/index.html
+++ b/index.html
@@ -107,20 +107,19 @@
 </head>
 <body>
   <header>
-    <h1>Tu Nombre Aquí</h1>
+    <h1>Josué Meléndez Herrera</h1>
     <div class="contacto">
-      <i class="fa-solid fa-envelope"></i> tuemail@correo.com |
-      <i class="fa-solid fa-phone"></i> +507 6000-0000 |
-      <i class="fa-brands fa-linkedin"></i> linkedin.com/in/tuusuario |
-      <i class="fa-brands fa-github"></i> github.com/tuusuario
+      <i class="fa-solid fa-envelope"></i> jmelende@est.ulatina.edu.pa |
+      <i class="fa-solid fa-phone"></i> +507 6921-1424 |
+      <i class="fa-brands fa-linkedin"></i> www.linkedin.com/in/josué-meléndez-herrera |
+      <i class="fa-brands fa-github"></i> github.com/joshue24
     </div>
   </header>
 
-  <div class="perfil">
-    Profesional en Tecnologías de la Información con experiencia en procesos de TI, 
-    gobernanza y seguridad de la información. Mi enfoque se centra en normativas como 
-    NIST, ITIL, ISO 22301 y COBIT 2019, con aportes en proyectos estratégicos como 
-    BIA-BCP y laboratorios prácticos de ciberseguridad.
+  <div class="perfil"> 
+    Soy un apasionado de la ciberseguridad que ha construido un perfil balanceado entre la gestión estratégica y la aplicación técnica práctica. 
+    Mi enfoque combina la adopción de estándares internacionales(NIST, ISO 27001, ISO 22301, ITIL 4) y buenas prácticas con un aprendizaje constante en laboratorios y entornos reales, 
+    siempre con la convicción de aportar valor en la protección de infraestructuras críticas y datos sensibles. 
   </div>
 
   <nav>
@@ -167,3 +166,4 @@
   </div>
 </body>
 </html>
+
