--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
   </header>
 
   <div class="perfil"> 
-    Soy un apasionado de la ciberseguridad que ha construido un perfil balanceado entre la gestión estratégica y la aplicación técnica práctica. 
-    Mi enfoque combina la adopción de estándares internacionales(NIST, ISO 27001, ISO 22301, ITIL 4) y buenas prácticas con un aprendizaje constante en laboratorios y entornos reales, 
+    Soy un apasionado de la ciberseguridad con experiencia en gestión de riesgos y el fortalecimiento de la seguridad en procesos tecnológicos 
+    mediante la adopción de estándares internacionales(NIST, ISO 27001, ISO 22301, ITIL 4) y buenas prácticas con un aprendizaje constante en laboratorios y entornos reales, 
     siempre con la convicción de aportar valor en la protección de infraestructuras críticas y datos sensibles. 
   </div>
 
@@ -166,4 +166,5 @@
   </div>
 </body>
 </html>
+
 
