--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
   <div class="perfil"> 
     Soy un apasionado de la ciberseguridad con experiencia en gestión de riesgos y el fortalecimiento de la seguridad en procesos tecnológicos 
-    mediante la adopción de estándares internacionales(NIST, ISO 27001, ISO 22301, ITIL 4) y buenas prácticas con un aprendizaje constante en laboratorios y entornos reales, 
+    mediante la adopción de estándares internacionales(NIST, ISO 27001, ISO 22301) y buenas prácticas(ITIL 4) con un aprendizaje constante en laboratorios y entornos reales, 
     siempre con la convicción de aportar valor en la protección de infraestructuras críticas y datos sensibles. 
   </div>
 
@@ -166,5 +166,6 @@
   </div>
 </body>
 </html>
+
 
 
