--- a/index.html
+++ b/index.html
@@ -118,10 +118,9 @@
 
   <div class="perfil"> 
     <h2>!Bievenid@sª!<h2>
-    <strong>Soy un apasionado de la ciberseguridad<strong> con experiencia en gestión de riesgos y el fortalecimiento de la seguridad de los procesos tecnológicos 
-    mediante la adopción de <strong>estándares internacionales<strong> (NIST, ISO 27001, ISO 22301) y <strong>buenas prácticas<strong>(ITIL 4). Me mantengo en aprendizaje constante constante a través de <strong>laboratorios
-      practicos en análisis y monitoreo de seguridad<strong>, 
-    siempre con la convicción de aportar valor en la <strong>protección de infraestructuras, sistemas críticos y datos sensibles<strong>. 
+    Soy un apasionado de la ciberseguridad con experiencia en gestión de riesgos y el fortalecimiento de la seguridad de los procesos tecnológicos 
+    mediante la adopción de estándares internacionales (NIST, ISO 27001, ISO 22301) y buenas prácticas(ITIL 4). Me mantengo en aprendizaje constante constante a través de laboratorios practicos en análisis y monitoreo de seguridad<strong>, 
+    siempre con la convicción de aportar valor en la protección de infraestructuras, sistemas críticos y datos sensibles. 
   </div>
 
   <nav>
@@ -168,6 +167,7 @@
   </div>
 </body>
 </html>
+
 
 
 
