--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   </header>
 
   <div class="perfil"> 
-    <h2>!Bievenid@sª!<h2>
+  !Bievenid@s!
     Soy un apasionado de la ciberseguridad con experiencia en gestión de riesgos y el fortalecimiento de la seguridad de los procesos tecnológicos 
     mediante la adopción de estándares internacionales (NIST, ISO 27001, ISO 22301) y buenas prácticas(ITIL 4). Me mantengo en aprendizaje constante constante a través de laboratorios practicos en análisis y monitoreo de seguridad<strong>, 
     siempre con la convicción de aportar valor en la protección de infraestructuras, sistemas críticos y datos sensibles. 
@@ -167,6 +167,7 @@
   </div>
 </body>
 </html>
+
 
 
 
