--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portafolio Profesional</title>
+  <title>Portafolio Profesional <!-- forzar redeploy --></title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- Comentario agregado solo para forzar redeploy -->
   <header>
     <h1>Tu Nombre Aquí</h1>
     <div class="contacto">
