--- a/index.html
+++ b/index.html
@@ -3,26 +3,124 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portafolio Profesional <!-- forzar redeploy --></title>
+  <title>Portafolio Profesional - Ciberseguridad</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f4f4;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #00bcd4; /* celeste */
+      color: #fff;
+      text-align: center;
+      padding: 40px 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    .contacto {
+      margin-top: 10px;
+      font-size: 1rem;
+    }
+    .contacto i {
+      margin: 0 8px;
+    }
+    .perfil {
+      background-color: #6a1b9a; /* morado */
+      color: white;
+      text-align: center;
+      padding: 25px 15px;
+      font-size: 1.2rem;
+    }
+    nav {
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      padding: 12px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    nav span {
+      margin: 0 20px;
+      font-weight: bold;
+      color: #6a1b9a;
+      cursor: pointer;
+      position: relative;
+      transition: color 0.3s ease;
+    }
+    nav span::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      display: block;
+      margin-top: 5px;
+      left: 0;
+      background: #6a1b9a;
+      transition: width 0.3s ease;
+    }
+    nav span:hover {
+      color: #00bcd4;
+    }
+    nav span:hover::after {
+      width: 100%;
+    }
+    .contenido {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+      padding: 30px;
+    }
+    .columna {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .columna:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    }
+    .columna h2 {
+      text-align: center;
+      color: #6a1b9a;
+      margin-bottom: 15px;
+    }
+    .columna ul {
+      list-style: none;
+      padding: 0;
+    }
+    .columna ul li {
+      margin-bottom: 12px;
+      display: flex;
+      align-items: center;
+    }
+    .columna ul li i {
+      color: #6a1b9a;
+      margin-right: 10px;
+    }
+  </style>
 </head>
 <body>
-<!-- Comentario agregado solo para forzar redeploy -->
   <header>
-    <h1>Tu Nombre Aquí</h1>
+    <h1>Josué Meléndez Herrera</h1>
     <div class="contacto">
-      <p>
-        <i class="fa-solid fa-envelope"></i> tuemail@correo.com |
-        <i class="fa-solid fa-phone"></i> +507 6000-0000 |
-        <i class="fa-brands fa-linkedin"></i> linkedin.com/in/tuusuario |
-        <i class="fa-brands fa-github"></i> github.com/tuusuario
-      </p>
+      <i class="fa-solid fa-envelope"></i> jmelende@est.ulatina.edu.pa |
+      <i class="fa-solid fa-phone"></i> +507 6921-1424 |
+      <i class="fa-brands fa-linkedin"></i> www.linkedin.com/in/josué-meléndez-herrera |
+      <i class="fa-brands fa-github"></i> github.com/joshue24
     </div>
   </header>
 
-  <div class="descripcion">
-    Soy un apasionado de la ciberseguridad con experiencia en gestión de riesgos y el fortalecimiento de la seguridad en procesos tecnológicos mediante la adopción de estándares internacionales (NIST, ISO 27001, ISO 22301) y buenas prácticas (ITIL 4). Con aprendizaje constante en laboratorios prácticos en análisis y monitoreo de seguridad, siempre con la convicción de aportar valor en la protección de infraestructuras críticas y datos sensibles.
+  <div class="perfil"> 
+  !Bievenid@s!
+    Soy un apasionado de la ciberseguridad con experiencia en gestión de riesgos y el fortalecimiento de la seguridad de los procesos tecnológicos 
+    mediante la adopción de estándares internacionales (NIST, ISO 27001, ISO 22301) y buenas prácticas(ITIL 4). Me mantengo en aprendizaje constante a través de laboratorios practicos en análisis y monitoreo de seguridad<strong>, 
+    siempre con la convicción de aportar valor en la protección de infraestructuras, sistemas críticos y datos sensibles. 
   </div>
 
   <nav>
@@ -33,80 +131,47 @@
   </nav>
 
   <div class="contenido">
-    <!-- Galería de Proyectos -->
     <div class="columna">
       <h2>Galería de Proyectos</h2>
-
-      <div class="proyecto">
-        <h3><i class="fa-solid fa-shield-halved"></i> Proyecto BIA-BCP</h3>
-        <p><strong>Objetivo:</strong> Identificación de riesgos en procesos TI.</p>
-        <p><strong>Herramientas:</strong> ISO 22301, matriz de riesgos.</p>
-        <p><strong>Procedimiento:</strong> Participación como analista de procesos.</p>
-        <p><strong>Evidencia visual:</strong> <i class="fa-solid fa-camera"></i> (espacio para imagen).</p>
-        <p><strong>Resultados:</strong> Riesgos críticos documentados.</p>
-        <p><strong>Valor agregado:</strong> Aporte a la resiliencia organizacional.</p>
-      </div>
-
-      <div class="proyecto">
-        <h3><i class="fa-solid fa-network-wired"></i> Laboratorios Wazuh & Wireshark</h3>
-        <p><strong>Objetivo:</strong> Simular entornos de monitoreo y análisis de tráfico.</p>
-        <p><strong>Herramientas:</strong> Wazuh SIEM, Wireshark.</p>
-        <p><strong>Procedimiento:</strong> Instalación en VM, detección de anomalías.</p>
-        <p><strong>Evidencia visual:</strong> <i class="fa-solid fa-camera"></i> (espacio para imagen).</p>
-        <p><strong>Resultados:</strong> Identificación de tráfico sospechoso.</p>
-        <p><strong>Valor agregado:</strong> Competencias prácticas en seguridad defensiva.</p>
-      </div>
-
-      <div class="proyecto">
-        <h3><i class="fa-solid fa-diagram-project"></i> Gestión de Proyectos con MS Project & ProjectLibre</h3>
-        <p><strong>Objetivo:</strong> Planificación y control de proyectos TI.</p>
-        <p><strong>Herramientas:</strong> MS Project, ProjectLibre.</p>
-        <p><strong>Procedimiento:</strong> Diseño de cronogramas y rutas críticas.</p>
-        <p><strong>Evidencia visual:</strong> <i class="fa-solid fa-camera"></i> (espacio para imagen).</p>
-        <p><strong>Resultados:</strong> Optimización de tiempos y recursos.</p>
-        <p><strong>Valor agregado:</strong> Fortalecimiento en gestión de proyectos TI.</p>
-      </div>
+      <ul>
+        <li><i class="fa-solid fa-shield-halved"></i> Proyecto BIA-BCP – Identificación de riesgos TI</li>
+        <li><i class="fa-solid fa-network-wired"></i> Laboratorios: Wazuh & Wireshark</li>
+        <li><i class="fa-solid fa-diagram-project"></i> Gestión de proyectos con MS Project & ProjectLibre</li>
+      </ul>
     </div>
 
-    <!-- Habilidades -->
     <div class="columna">
       <h2>Habilidades</h2>
       <ul>
-        <li><i class="fa-solid fa-book"></i> Gobernanza y Cumplimiento (NIST, ISO 27001, ISO 22301, ITIL 4)</li>
-        <li><i class="fa-solid fa-lightbulb"></i> Creatividad e Innovación</li>
-        <li><i class="fa-solid fa-brain"></i> Pensamiento Analítico y Crítico</li>
-        <li><i class="fa-solid fa-user-check"></i> Orientación hacia el Cliente</li>
-        <li><i class="fa-solid fa-diagram-project"></i> Gestión de Proyectos (MS Project, ProjectLibre, PMI)</li>
+        <li><i class="fa-solid fa-book"></i> Gobernanza y Cumplimiento (NIST, ITIL, COBIT 2019, ISO 22301)</li>
         <li><i class="fa-solid fa-magnifying-glass-chart"></i> Monitoreo y análisis de seguridad</li>
         <li><i class="fa-solid fa-code"></i> Conocimientos en SonarQube & Cypress</li>
       </ul>
     </div>
 
-    <!-- Experiencia Laboral -->
     <div class="columna">
       <h2>Experiencia Laboral</h2>
       <ul>
-        <li><i class="fa-solid fa-shield-halved"></i> Evaluador de Control Interno – Integración de seguridad en el ciclo de vida de software, asegurar estándares, políticas y procedimientos</li>
         <li><i class="fa-solid fa-briefcase"></i> Analista de Procesos TI – Participación en proyectos críticos</li>
         <li><i class="fa-solid fa-shield"></i> Aportes en gestión de continuidad y seguridad</li>
-        <li><i class="fa-solid fa-server"></i> Técnico de Operaciones y Centro de Datos – Administración de respaldos, monitoreo de redes y sistemas de misión crítica (climatización, extinción de incendio y UPS)</li>
       </ul>
     </div>
 
-    <!-- Educación -->
     <div class="columna">
       <h2>Educación</h2>
       <ul>
         <li><i class="fa-solid fa-certificate"></i> Certificación CC (ISC)² en Ciberseguridad</li>
-        <li><i class="fa-solid fa-graduation-cap"></i> BootCamp Analista SOC L1</li>
-        <li><i class="fa-solid fa-graduation-cap"></i> BootCamp Fundamentos de Ciberseguridad</li>
-        <li><i class="fa-solid fa-graduation-cap"></i> Curso de Gestión de Proyectos</li>
-        <li><i class="fa-solid fa-graduation-cap"></i> Curso de Ciberseguridad y Gestión de Crisis</li>
-        <li><i class="fa-solid fa-graduation-cap"></i> Curso en ISO 27001 & ISO 22301</li>
-        <li><i class="fa-solid fa-graduation-cap"></i> CCNA Routing & Switching</li>
-        <li><i class="fa-solid fa-user-graduate"></i> Licenciatura en Ingeniería en Sistemas Informáticos</li>
+        <li><i class="fa-solid fa-graduation-cap"></i> Cursos en ITIL 4, COBIT 2019 y Continuidad de Negocio</li>
       </ul>
     </div>
   </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
