--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <p><strong>Procedimiento:</strong> Diseño de cronogramas y rutas críticas.</p>
         <p><strong>Evidencia visual:</strong></p>
 
-        <a href="docs/Diagrama de Gantt.jpg" target="_blank">
+        <a href="docs/Diagrama de Gantt.JPG" target="_blank">
         <i class="fa-solid fa-image"></i> Ver Evidencia de Gestión de Proyectos       
         </a>
 
@@ -240,3 +240,4 @@
 
 </body>
 </html>
+
